LoyaltyProgram1/src/objects/Loyalty_Order__c.object
<CustomObject>
    <fields>
        <fullName>First_name__c</fullName>
        <description>Submitters First Name</description>
        <inlineHelpText>Submitters First Name</inlineHelpText>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Submitter&apos;s Last Name</description>
        <inlineHelpText>Submitter&apos;s Last Name</inlineHelpText>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loyalty_Number__c</fullName>
        <description>Bio-Rad Generated Loyalty Number</description>
        <inlineHelpText>Bio-Rad Supplied Loyalty Number</inlineHelpText>
        <label>Loyalty_Number</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Submit_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Date the Loyalty Order is entered</description>
        <inlineHelpText>Date the Loyalty Order is entered</inlineHelpText>
        <label>Order Submit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <label>Owner Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>Bio-Rad CFX Product Name</description>
        <inlineHelpText>Bio-Rad CFX Product Name</inlineHelpText>
        <label>Product Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Number__c</fullName>
        <description>Customer PO NUmber</description>
        <inlineHelpText>Customer PO Number</inlineHelpText>
        <label>Purchase Order Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Number__c</fullName>
        <inlineHelpText>Bio-Rad Issued Sales Order Number</inlineHelpText>
        <label>Sales Order Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <description>CFX Device Serial Number</description>
        <inlineHelpText>Your CFX Serial Number</inlineHelpText>
        <label>Serial_Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Email__c</fullName>
        <description>Order submitter email</description>
        <inlineHelpText>Order submitter email</inlineHelpText>
        <label>User Email</label>
        <type>Email</type>
    </fields>
    <label>Loyalty Order</label>
    <nameField>
        <label>Loyalty Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loyalty Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>